VSE preview crash when setting rendered (EEVEE/Workbench) #62845

Closed
opened 2019-03-22 16:14:56 +01:00 by Dalai Felinto · 4 comments

Blender Version
Broken: a17df6d91e
Worked: ?

Short description of error
Assert when set preview shading in VSE for rendered (for EEVEE and workbench at least).

Exact steps for others to reproduce the error
In the video editor with preview, add a Scene strip, and in the Scene Preview/Render panel, set Sequencer Preview Shading to Rendered.
Or you can open the following file and just set the shading to Rendered:
eevee-vse.blend

BLI_assert failed: //source/blender/windowmanager/intern/wm_window.c:2332, WM_opengl_context_activate(), at 'GPU_framebuffer_active_get() == ((void *)0)'
Full backtrace: P942

**Blender Version** Broken: a17df6d91e Worked: ? **Short description of error** Assert when set preview shading in VSE for rendered (for EEVEE and workbench at least). **Exact steps for others to reproduce the error** In the video editor with preview, add a Scene strip, and in the `Scene Preview/Render` panel, set `Sequencer Preview Shading` to `Rendered`. Or you can open the following file and just set the shading to `Rendered`: [eevee-vse.blend](https://archive.blender.org/developer/F6865661/eevee-vse.blend) `BLI_assert failed: //source/blender/windowmanager/intern/wm_window.c:2332, WM_opengl_context_activate(), at 'GPU_framebuffer_active_get() == ((void *)0)'` Full backtrace: [P942](https://archive.blender.org/developer/P942.txt)
Author
Owner

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Clément Foucault was assigned by Dalai Felinto 2019-03-22 16:32:40 +01:00
Author
Owner

For the records, it works fine with release builds. But since this assert is for "sanity reasons" it should be addressed eventually.

For the records, it works fine with release builds. But since this assert is for "sanity reasons" it should be addressed eventually.

This issue was referenced by 0a89c3954f

This issue was referenced by 0a89c3954f465c2a528e03c06f28ad9c33ed907d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62845
No description provided.