Fix T62845 VSE preview crash when setting rendered (EEVEE/Workbench)